enh: update biblio

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,6 +48,8 @@
 	author = {Chevallier, Sylvain and Kalunga, Emmanuel K. and Barthélemy, Quentin and Yger, Florian},
 	year = {2018},
 	note = {https://www.routledge.com/BrainComputer-Interfaces-Handbook-Technological-and-Theoretical-Advances/Nam-Nijholt-Lotte/p/book/9781351231954},
+	annote = {https://www.routledge.com/BrainComputer-Interfaces-Handbook-Technological-and-Theoretical-Advances/Nam-Nijholt-Lotte/p/book/9781351231954
+ },
 	file = {Chevallier et al. - 2018 - Riemannian classification for SSVEP based BCI off.pdf:/Users/sylchev/Zotero/storage/A7XKTTUW/Chevallier et al. - 2018 - Riemannian classification for SSVEP based BCI off.pdf:application/pdf;Nam-Nijholt-Lotte-Chapitre 19-only-18.pdf:/Users/sylchev/recherche/publications/livres/Nam-Nijholt-Lotte-Chapitre 19-only-18.pdf:application/pdf},
 }
 
@@ -835,6 +837,7 @@ Clinical Trial Registration: This pilot study was a preliminary step before the 
 	note = {Number: arXiv:2102.06015
 arXiv:2102.06015 [cs, eess]},
 	keywords = {Computer Science - Machine Learning, Electrical Engineering and Systems Science - Signal Processing},
+	annote = {Comment: 7 pages, 7 figures, submitted to ICASSP conference},
 	file = {arXiv Fulltext PDF:/Users/sylchev/Zotero/storage/NJBRWCGD/Corsi et al. - 2021 - RIGOLETTO -- RIemannian GeOmetry LEarning applica.pdf:application/pdf;arXiv.org Snapshot:/Users/sylchev/Zotero/storage/U25QMGID/2102.html:text/html},
 }
 
@@ -924,12 +927,14 @@ arXiv:2102.06015 [cs, eess]},
 	doi = {10.12751/NNCN.BC2022.049},
 	language = {en},
 	urldate = {2023-01-04},
+	publisher = {G-Node},
 	author = {Hoxha, Isabelle and Bäker, Clark and Chevallier, Sylvain and Glasauer, Stefan and Amorim, Michel-Ange},
 	collaborator = {Node, German Neuroinformatics},
 	month = sep,
 	year = {2022},
-	note = {Publisher: G-Node},
 	keywords = {Attention, reward, decision making, Computational Neuroscience},
+	annote = {Other
+Bernstein Conference 2022 abstract. http://bernstein-conference.de},
 }
 
 @techreport{hoxha_nl-ddm_2022,
@@ -947,4 +952,229 @@ arXiv:2102.06015 [cs, eess]},
 	year = {2022},
 	doi = {10.1101/2022.07.18.498922},
 	file = {Version soumise:/Users/sylchev/Zotero/storage/DZNVS5WU/Hoxha et al. - 2022 - nl-DDM a non-linear drift-diffusion model account.pdf:application/pdf},
+}
+
+@inproceedings{hartley_traitement_2022,
+	title = {Un traitement innovant pour le syndrome des jambes sans repos pharmaco-résistant : la stimulation non invasive du nerf vague},
+	volume = {19},
+	shorttitle = {Un traitement innovant pour le syndrome des jambes sans repos pharmaco-résistant},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1769449322000176},
+	doi = {10.1016/j.msom.2022.01.017},
+	language = {fr},
+	urldate = {2024-08-26},
+	booktitle = {Médecine du {Sommeil}},
+	author = {Hartley, Sarah and Bao, Guillaume and Zagdoun, Marine and Chevallier, Sylvain and Lajoie, Didier and Bohic, Mikaelle and Leotard, Antoine and Azabou, Éric},
+	month = mar,
+	year = {2022},
+	pages = {57},
+}
+
+@inproceedings{yamamoto_user-specific_2022,
+	address = {Grenoble, France},
+	title = {User-specific frequency band and time segment selection with high class distinctiveness for {Riemannian} {BCIs}},
+	url = {https://hal.science/LISV/hal-03931339v1},
+	author = {Yamamoto, Maria Sayu and Lotte, Fabien and Yger, Florian and Chevallier, Sylvain},
+	year = {2022},
+}
+
+@inproceedings{wei_2021_2022,
+	series = {Proceedings of {Machine} {Learning} {Research}},
+	title = {2021 {BEETL} {Competition}: {Advancing} {Transfer} {Learning} for {Subject} {Independence} and {Heterogenous} {EEG} {Data} {Sets}},
+	volume = {176},
+	url = {https://proceedings.mlr.press/v176/wei22a.html},
+	abstract = {Transfer learning and meta-learning offer some of the most promising avenues to unlock the scalability of healthcare and consumer technologies driven by biosignal data. This is because regular machine learning methods cannot generalise well across human subjects and handle learning from different, heterogeneously collected data sets, thus limiting the scale of training data available. On the other hand, the many developments in transfer- and meta-learning fields would benefit significantly from a real-world benchmark with immediate practical application. Therefore, we pick electroencephalography (EEG) as an exemplar for all the things that make biosignal data analysis a hard problem. We design two transfer learning challenges around a. clinical diagnostics and b. neurotechnology. These two challenges are designed to probe algorithmic performance with all the challenges of biosignal data, such as low signal-to-noise ratios, major variability among subjects, differences in the data recording sessions and techniques, and even between the specific BCI tasks recorded in the dataset. Task 1 is centred on the field of medical diagnostics, addressing automatic sleep stage annotation across subjects. Task 2 is centred on Brain-Computer Interfacing (BCI), addressing motor imagery decoding across both subjects and data sets. The successful 2021 BEETL competition with its over 30 competing teams and its 3 winning entries brought attention to the potential of deep transfer learning and combinations of set theory and conventional machine learning techniques to overcome the challenges. The results set a new state-of-the-art for the real-world BEETL benchmarks.},
+	booktitle = {Proceedings of the {NeurIPS} 2021 {Competitions} and {Demonstrations} {Track}},
+	publisher = {PMLR},
+	author = {Wei, Xiaoxi and Faisal, A. Aldo and Grosse-Wentrup, Moritz and Gramfort, Alexandre and Chevallier, Sylvain and Jayaram, Vinay and Jeunet, Camille and Bakas, Stylianos and Ludwig, Siegfried and Barmpas, Konstantinos and Bahri, Mehdi and Panagakis, Yannis and Laskaris, Nikolaos and Adamos, Dimitrios A. and Zafeiriou, Stefanos and Duong, William C. and Gordon, Stephen M. and Lawhern, Vernon J. and Śliwowski, Maciej and Rouanne, Vincent and Tempczyk, Piotr},
+	editor = {Kiela, Douwe and Ciccone, Marco and Caputo, Barbara},
+	month = dec,
+	year = {2022},
+	pages = {205--219},
+}
+
+@article{hoxha_eeg_2023,
+	title = {{EEG} anticipatory activity depends on sensory modality},
+	url = {https://www.biorxiv.org/content/early/2023/09/29/2023.09.27.559806},
+	doi = {10.1101/2023.09.27.559806},
+	abstract = {Perceptual anticipation is known to have an impact on the reaction time of decisions. While anticipatory brain activity patterns have been identified in human EEG, in particular in the form of Contingent-Negative Variations (CNV), the single-trial neural signature of anticipation remains unexplored. Similarly, past studies have underlined an effect of pre-stimulus alpha-band activity on reaction times. Still, it remains unknown whether this activity is stimulus-specific or rather acts as a general indicator of readiness. This study aimed to decipher whether human participants expected a visual or an auditory stimulus at the single-trial level in both cued and uncued trials. We show that the CNV entails information about the expected upcoming stimulus, and the information content can be extracted at the single-trial level. Behavioral analyses additionally indicate the correct classification of uncued trials.Competing Interest StatementThe authors have declared no competing interest.},
+	journal = {bioRxiv},
+	author = {Hoxha, Isabelle and Chevallier, Sylvain and Delorme, Arnaud and Amorim, Michel-Ange},
+	year = {2023},
+	note = {Publisher: Cold Spring Harbor Laboratory
+\_eprint: https://www.biorxiv.org/content/early/2023/09/29/2023.09.27.559806.full.pdf},
+	file = {Hoxha et al. - 2023 - EEG anticipatory activity depends on sensory modal.pdf:/Users/sylchev/Zotero/storage/YETQF4EW/Hoxha et al. - 2023 - EEG anticipatory activity depends on sensory modal.pdf:application/pdf},
+}
+
+@article{hoxha_accounting_2023,
+	title = {Accounting for endogenous effects in decision-making with a non-linear diffusion decision model},
+	volume = {13},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-023-32841-9},
+	doi = {10.1038/s41598-023-32841-9},
+	abstract = {Abstract
+            The Drift-Diffusion Model (DDM) is widely accepted for two-alternative forced-choice decision paradigms thanks to its simple formalism and close fit to behavioral and neurophysiological data. However, this formalism presents strong limitations in capturing inter-trial dynamics at the single-trial level and endogenous influences. We propose a novel model, the non-linear Drift-Diffusion Model (nl-DDM), that addresses these issues by allowing the existence of several trajectories to the decision boundary. We show that the non-linear model performs better than the drift-diffusion model for an equivalent complexity. To give better intuition on the meaning of nl-DDM parameters, we compare the DDM and the nl-DDM through correlation analysis. This paper provides evidence of the functioning of our model as an extension of the DDM. Moreover, we show that the nl-DDM captures time effects better than the DDM. Our model paves the way toward more accurately analyzing across-trial variability for perceptual decisions and accounts for peri-stimulus influences.},
+	language = {en},
+	number = {1},
+	urldate = {2024-08-26},
+	journal = {Scientific Reports},
+	author = {Hoxha, Isabelle and Chevallier, Sylvain and Ciarchi, Matteo and Glasauer, Stefan and Delorme, Arnaud and Amorim, Michel-Ange},
+	month = apr,
+	year = {2023},
+	pages = {6323},
+	file = {Texte intégral:/Users/sylchev/Zotero/storage/RZBXZSFA/Hoxha et al. - 2023 - Accounting for endogenous effects in decision-maki.pdf:application/pdf},
+}
+
+@inproceedings{corsi_ensemble_2023,
+	address = {Cartagena de Indias, Colombia},
+	title = {Ensemble of {Riemannian} {Classifiers} for {Multimodal} {Data}: {FUCONE} {Approach} for {M}/{EEG} {Data}},
+	url = {https://inria.hal.science/hal-04140126},
+	booktitle = {{ISBI} 2023 - {IEEE} {International} {Symposium} on {Biomedical} {Imaging}},
+	author = {Corsi, Marie-Constance and Chevallier, Sylvain and de Vico Fallani, Fabrizio and Yger, Florian},
+	month = apr,
+	year = {2023},
+}
+
+@misc{carrara_holographic_2023,
+	title = {Holographic {EEG}: multi-view deep learning for {BCI}},
+	url = {https://hal.science/hal-04095900},
+	publisher = {CORTICO},
+	author = {Carrara, Igor and Aristimunha, Bruno and Chevallier, Sylvain and Corsi, Marie-Constance and Papadopoulo, Théodore and Corsi, Marie-Constance},
+	month = may,
+	year = {2023},
+	note = {Published: Journée CORTICO 2023 - COllectif pour la Recherche Transdisciplinaire sur les Interfaces Cerveau-Ordinateur},
+	keywords = {EEG, Motor Imagery, Artificial Intelligence, Contrastive Learning, Self-Supervised, SPD, SPDNet},
+	annote = {Poster},
+}
+
+@misc{frateur_dimensionality_2023,
+	title = {Dimensionality {Reduction} and {Frequency} {Bin} {Optimization} {To} {Improve} a {Riemannian}-based {Classification} {Pipeline}},
+	url = {https://inria.hal.science/hal-04140107},
+	publisher = {CORTICO},
+	author = {Frateur, Rune and Chevallier, Sylvain and Yger, Florian and Corsi, Marie-Constance},
+	month = may,
+	year = {2023},
+	note = {Published: CORTICO 2023 - Journées COllectif pour la Recherche Transdisciplinaire sur les Interfaces Cerveau-Ordinateur},
+	annote = {Poster},
+}
+
+@misc{aristimunha_concerto_2023,
+	title = {{CONCERTO}: {Coherence} \& {Functional} {Connectivity} {Graph} {Network}},
+	url = {https://hal.science/hal-04121445},
+	publisher = {CORTICO},
+	author = {Aristimunha, Bruno and Camargo, Raphael Yokoingawa De and Pinaya, Walter Hugo Lopez and Yger, Florian and Corsi, Marie-Constance and Chevallier, Sylvain},
+	month = may,
+	year = {2023},
+	note = {Published: Journée CORTICO 2023},
+	keywords = {Brain-Computer Interfaces, Motor Imagery, Deep Learning, Functional Connectivity, Graph Neural Network, Motor Imagery BMI},
+	annote = {Poster},
+}
+
+@misc{yamamoto_effectiveness_2023,
+	title = {Effectiveness of cross-frequency phase-amplitude covariance as additional features for {Riemannian} {BCIs}},
+	url = {https://hal.science/hal-04181391},
+	publisher = {The Brain-Computer Interface (BCI) Society},
+	author = {Yamamoto, Maria Sayu and Chevallier, Sylvain and Lotte, Fabien},
+	month = jun,
+	year = {2023},
+	doi = {10.3217/978-3-85125-962-9-179},
+	note = {Published: BCI 2023 - 10th International BCI Meeting Balancing Innovation and Translation},
+	annote = {Poster},
+}
+
+@inproceedings{yamamoto_novel_2023,
+	address = {Helsinki, Finland},
+	title = {Novel {SPD} matrix representations considering cross-frequency coupling for {EEG} classification using {Riemannian} geometry},
+	url = {https://hal.science/hal-04131609},
+	booktitle = {{EUSIPCO} 2023 - {The} 31st {European} {Signal} {Processing} {Conference}},
+	author = {Yamamoto, Maria Sayu and Mellot, Apolline and Chevallier, Sylvain and Lotte, Fabien},
+	month = sep,
+	year = {2023},
+	keywords = {Electroencephalography (EEG), Riemannian geometry, Brain-computer interfaces (BCI), cross-frequency coupling (CFC)},
+}
+
+@inproceedings{aristimunha_synthetic_2023,
+	address = {New orleans, United States},
+	title = {Synthetic {Sleep} {EEG} {Signal} {Generation} using {Latent} {Diffusion} {Models}},
+	url = {https://universite-paris-saclay.hal.science/hal-04350867},
+	booktitle = {{DGM4H} 2023 - 1st {Workshop} on {Deep} {Generative} {Models} for {Health} at {NeurIPS} 2023},
+	author = {Aristimunha, Bruno and de Camargo, Raphael Yokoingawa and Chevallier, Sylvain and Thomas, Adam G. and Lucena, Oeslle and Cardoso, Jorge and Pinaya, Walter Hugo Lopez and Dafflon, Jessica},
+	month = dec,
+	year = {2023},
+}
+
+@misc{carrara_augmented_2023,
+	title = {Augmented {SPDNet}: {Second}-{Order} {Neural} {Network} for {Motor} {Imagery}-{Based} {BCI}},
+	url = {https://inria.hal.science/hal-04308549},
+	author = {Carrara, Igor and Aristimunha, Bruno and Corsi, Marie-Constance and Camargo, Raphael Yokoingawa De and Chevallier, Sylvain and Papadopoulo, Théodore},
+	month = nov,
+	year = {2023},
+	note = {Published: Soph.IA summit 2023},
+	keywords = {Brain-Computer Interfaces, Motor Imagery, Artificial Intelligence, Carbon Footprint, Electroencephalogram, Explainability, Functional connectivity, Riemannian optimization, SPD manifold},
+	annote = {Poster},
+}
+
+@article{corsi_measuring_2023,
+	title = {Measuring {Neuronal} {Avalanches} to inform {Brain}-{Computer} {Interfaces}},
+	volume = {27},
+	url = {https://inria.hal.science/hal-04345847},
+	doi = {10.1016/j.isci.2023.108734},
+	number = {1},
+	journal = {iScience},
+	author = {Corsi, Marie-Constance and Sorrentino, Pierpaolo and Schwartz, Denis P and George, Nathalie and Gollo, Leonardo L. and Chevallier, Sylvain and Hugueville, Laurent and Kahn, Ari E and Dupont, Sophie and Bassett, Danielle S and Jirsa, Viktor and de Vico Fallani, Fabrizio},
+	month = dec,
+	year = {2023},
+	note = {Publisher: Elsevier},
+	keywords = {MEG, BCI, Classification, Motor imagery, Neuronal avalanches, Patterns},
+	pages = {108734},
+}
+
+@article{hartley_self-administered_2023,
+	title = {Self-administered non-invasive vagus nerve stimulation therapy for severe pharmacoresistant restless legs syndrome: outcomes at 6 months},
+	url = {https://hal.science/hal-04258081},
+	doi = {10.1111/jsr.14066},
+	journal = {Journal of Sleep Research},
+	author = {Hartley, Sarah and Bao, Guillaume and Russo, Ashley and Zagdoun, Marine and Chevallier, Sylvain and Lofaso, Frédéric and Leotard, Antoine and Azabou, Eric},
+	month = jan,
+	year = {2023},
+	note = {Publisher: Wiley},
+	keywords = {Vagus nerve stimulation, Sleep, Non-pharmacological intervention, Restless legs syndrome},
+}
+
+@article{zammouri_use_2023,
+	title = {Use of cognitive load measurements to design a new architecture of intelligent learning systems},
+	volume = {237},
+	url = {https://universite-paris-saclay.hal.science/hal-04350891},
+	doi = {10.1016/j.eswa.2023.121253},
+	journal = {Expert Systems with Applications},
+	author = {Zammouri, Amin and Moussa, Abdelaziz Ait and Chevallier, Sylvain},
+	month = aug,
+	year = {2023},
+	note = {Publisher: Elsevier},
+	keywords = {Brain-Computer Interface, Cognitive Load, Fuzzy Logic, Intelligent Tutoring System},
+	pages = {121253},
+}
+
+@article{junqueira_systematic_2024,
+	title = {A systematic evaluation of {Euclidean} alignment with deep learning for {EEG} decoding},
+	volume = {21},
+	issn = {1741-2560, 1741-2552},
+	url = {https://iopscience.iop.org/article/10.1088/1741-2552/ad4f18},
+	doi = {10.1088/1741-2552/ad4f18},
+	abstract = {Abstract
+            
+              Objective:
+              Electroencephalography signals are frequently used for various Brain–Computer interface (BCI) tasks. While deep learning (DL) techniques have shown promising results, they are hindered by the substantial data requirements. By leveraging data from multiple subjects, transfer learning enables more effective training of DL models. A technique that is gaining popularity is Euclidean alignment (EA) due to its ease of use, low computational complexity, and compatibility with DL models. However, few studies evaluate its impact on the training performance of shared and individual DL models. In this work, we systematically evaluate the effect of EA combined with DL for decoding BCI signals.
+              Approach:
+              We used EA as a pre-processing step to train shared DL models with data from multiple subjects and evaluated their transferability to new subjects.
+              Main results:
+              Our experimental results show that it improves decoding in the target subject by 4.33\% and decreases convergence time by more than 70\%. We also trained individual models for each subject to use as a majority-voting ensemble classifier. In this scenario, using EA improved the 3-model ensemble accuracy by 3.71\%. However, when compared to the shared model with EA, the ensemble accuracy was 3.62\% lower.
+              Significance:
+              EA succeeds in the task of improving transfer learning performance with DL models and, could be used as a standard pre-processing technique.},
+	number = {3},
+	urldate = {2024-08-26},
+	journal = {Journal of Neural Engineering},
+	author = {Junqueira, Bruna and Aristimunha, Bruno and Chevallier, Sylvain and De Camargo, Raphael Y},
+	month = jun,
+	year = {2024},
+	pages = {036038},
 }
