--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1034,22 +1034,24 @@ Bernstein Conference 2022 abstract. http://bernstein-conference.de},
 	year = {2023},
 }
 
-@misc{carrara_holographic_2023,
+@inproceedings{carrara_holographic_2023,
+	address = {Paris, France},
 	title = {Holographic {EEG}: multi-view deep learning for {BCI}},
 	url = {https://hal.science/hal-04095900},
-	publisher = {CORTICO},
+	booktitle = {{CORTICO}},
 	author = {Carrara, Igor and Aristimunha, Bruno and Chevallier, Sylvain and Corsi, Marie-Constance and Papadopoulo, Théodore and Corsi, Marie-Constance},
 	month = may,
 	year = {2023},
 	note = {Published: Journée CORTICO 2023 - COllectif pour la Recherche Transdisciplinaire sur les Interfaces Cerveau-Ordinateur},
-	keywords = {EEG, Motor Imagery, Artificial Intelligence, Contrastive Learning, Self-Supervised, SPD, SPDNet},
+	keywords = {Artificial Intelligence, Contrastive Learning, EEG, Motor Imagery, Self-Supervised, SPD, SPDNet},
 	annote = {Poster},
 }
 
-@misc{frateur_dimensionality_2023,
+@inproceedings{frateur_dimensionality_2023,
+	address = {Paris, France},
 	title = {Dimensionality {Reduction} and {Frequency} {Bin} {Optimization} {To} {Improve} a {Riemannian}-based {Classification} {Pipeline}},
 	url = {https://inria.hal.science/hal-04140107},
-	publisher = {CORTICO},
+	booktitle = {{CORTICO}},
 	author = {Frateur, Rune and Chevallier, Sylvain and Yger, Florian and Corsi, Marie-Constance},
 	month = may,
 	year = {2023},
@@ -1057,26 +1059,29 @@ Bernstein Conference 2022 abstract. http://bernstein-conference.de},
 	annote = {Poster},
 }
 
-@misc{aristimunha_concerto_2023,
+@inproceedings{aristimunha_concerto_2023,
+	address = {Paris, France},
 	title = {{CONCERTO}: {Coherence} \& {Functional} {Connectivity} {Graph} {Network}},
 	url = {https://hal.science/hal-04121445},
-	publisher = {CORTICO},
+	booktitle = {{CORTICO}},
 	author = {Aristimunha, Bruno and Camargo, Raphael Yokoingawa De and Pinaya, Walter Hugo Lopez and Yger, Florian and Corsi, Marie-Constance and Chevallier, Sylvain},
 	month = may,
 	year = {2023},
 	note = {Published: Journée CORTICO 2023},
-	keywords = {Brain-Computer Interfaces, Motor Imagery, Deep Learning, Functional Connectivity, Graph Neural Network, Motor Imagery BMI},
+	keywords = {Brain-Computer Interfaces, Deep Learning, Functional Connectivity, Graph Neural Network, Motor Imagery, Motor Imagery BMI},
 	annote = {Poster},
 }
 
-@misc{yamamoto_effectiveness_2023,
+@inproceedings{yamamoto_effectiveness_2023,
+	address = {Bruxelles},
 	title = {Effectiveness of cross-frequency phase-amplitude covariance as additional features for {Riemannian} {BCIs}},
 	url = {https://hal.science/hal-04181391},
+	doi = {10.3217/978-3-85125-962-9-179},
+	booktitle = {{BCI} {Meeting}},
 	publisher = {The Brain-Computer Interface (BCI) Society},
 	author = {Yamamoto, Maria Sayu and Chevallier, Sylvain and Lotte, Fabien},
 	month = jun,
 	year = {2023},
-	doi = {10.3217/978-3-85125-962-9-179},
 	note = {Published: BCI 2023 - 10th International BCI Meeting Balancing Innovation and Translation},
 	annote = {Poster},
 }
@@ -1102,14 +1107,16 @@ Bernstein Conference 2022 abstract. http://bernstein-conference.de},
 	year = {2023},
 }
 
-@misc{carrara_augmented_2023,
+@inproceedings{carrara_augmented_2023,
+	address = {Sophia-Antipolis},
 	title = {Augmented {SPDNet}: {Second}-{Order} {Neural} {Network} for {Motor} {Imagery}-{Based} {BCI}},
 	url = {https://inria.hal.science/hal-04308549},
+	booktitle = {Soph.{IA} {Summit}},
 	author = {Carrara, Igor and Aristimunha, Bruno and Corsi, Marie-Constance and Camargo, Raphael Yokoingawa De and Chevallier, Sylvain and Papadopoulo, Théodore},
 	month = nov,
 	year = {2023},
 	note = {Published: Soph.IA summit 2023},
-	keywords = {Brain-Computer Interfaces, Motor Imagery, Artificial Intelligence, Carbon Footprint, Electroencephalogram, Explainability, Functional connectivity, Riemannian optimization, SPD manifold},
+	keywords = {Artificial Intelligence, Brain-Computer Interfaces, Carbon Footprint, Electroencephalogram, Explainability, Functional connectivity, Motor Imagery, Riemannian optimization, SPD manifold},
 	annote = {Poster},
 }
 
@@ -1177,4 +1184,14 @@ Bernstein Conference 2022 abstract. http://bernstein-conference.de},
 	month = jun,
 	year = {2024},
 	pages = {036038},
+}
+
+@techreport{verbockhaven_growing_2024,
+	title = {Growing {Tiny} {Networks}: {Spotting} {Expressivity} {Bottlenecks} and {Fixing} {Them} {Optimally}},
+	url = {https://hal.science/hal-04591472},
+	author = {Verbockhaven, Manon and Chevallier, Sylvain and Charpiat, Guillaume},
+	month = may,
+	year = {2024},
+	keywords = {architecture growing, expressivity, Neural architecture search},
+	annote = {working paper or preprint},
 }
